// Copyright 2015 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package messages;

import "google/protobuf/timestamp.proto";

// BlobWithSHA1 is a wrapper around a binary blob with SHA1 hash to verify
// its integrity.
message BlobWithSHA1 {
  bytes blob = 1;
  bytes sha1 = 2;
}

// TagCache stores a mapping (package name, tag) -> instance ID to
// speed up subsequent ResolveVersion calls when tags are used.
//
// It also contains a (instance_id, file_name) -> hash mapping which is used for
// client self-update purposes. file_name is case-senstive and must always use
// POSIX-style slashes.
//
// TODO(vadimsh): Use server hostname as a part of the cache key.
message TagCache {
  message Entry {
    string package = 1;
    string tag = 2;
    string instance_id = 3;
  }

  // Capped list of entries, most recently resolved is last.
  repeated Entry entries = 1;

  message FileEntry {
    string package = 1;
    string instance_id = 2;
    string file_name = 3;
    string hash = 4;
  }
  repeated FileEntry file_entries = 2;
}

// InstanceCache stores a list of instances and their last access time.
//
// This cache does not depend on a server being used, since an instance's ID is
// derived only from its contents (regardless from where it was downloaded).
message InstanceCache {
  // Entry stores info about an instance.
  message Entry {
    // LastAccess is last time this instance was retrieved from or put to the
    // cache.
    google.protobuf.Timestamp last_access = 2;
  }

  // Entries is a map of {instance id -> information about instance}.
  map<string, Entry> entries = 1;
  // LastSynced is timestamp when we synchronized Entries with actual
  // instance files.
  google.protobuf.Timestamp last_synced = 2;
}
